# access-control

./: .gitignore  .gitlab-ci.yml  README.md  main_provision.py  package-lock.json  package.json  start_api.sh  start_config.sh  start_dashboard.sh  start_provision.sh  start_redis.sh  start_ui.sh
.gitlab/api/: Dockerfile
.gitlab/config/: Dockerfile
.gitlab/dashboard/: Dockerfile  nginx.conf
.gitlab/provision/: Dockerfile
angular-app/: package-lock.json
angular-app/src/app/: api.service.ts  app-routing.module.ts  app.module.ts
angular-app/src/app/dashboard/: dashboard.component.ts
api/: README.rst  __init__.py  config.py  config.sample.yml  main.py  main_provision.py  models.py  provision.py  pyproject.toml
api/api/: __init__.py  config.py  models.py  provision.py  utils.py  version.py
config/: config.sample.yml  main.py  pyproject.toml
dashboard/: angular.json  package-lock.json  package.json
dashboard/src/: index.html
dashboard/src/app/: api.service.ts  app-routing.module.ts  app.module.ts  authentication.guard.ts  hide-prod.directive.ts
dashboard/src/environments/: environment.prod.ts  environment.ts
provision/: api  main.py  pyproject.toml
src/: index.html
src/app/: api.service.ts  app-routing.module.ts  app.module.ts  authentication.guard.ts  authentication.service.ts
src/app/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
src/app/login/: login.component.css  login.component.html  login.component.ts
src/environments/: environment.prod.ts  environment.ts
(+37 files in other folders)
