[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Simon Beginn <simon@simonmicro.de>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-multipart = "^0.0.5"
inotify-simple = "^1.3.5"
redis = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
