[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["Simon Beginn <simonmicro@simonmicro.de>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.0"
redis = "^4.2.2"
PyYAML = "^6.0"
inotify-simple = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
