[tool.poetry]
name = "provision"
version = "0.1.0"
description = ""
authors = ["Simon Beginn <simon@simonmicro.de>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.0"
redis = "^4.2.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
